Fix action bar layout bug

--- a/views/themes/action_bar/assets/stylesheets/action_bar/action_bar.scss
+++ b/views/themes/action_bar/assets/stylesheets/action_bar/action_bar.scss
@@ -1,51 +1,51 @@
-.qor-actionbar{
+.qor-actionbar {
     height: 32px;
     background-color: #3b3b3b;
     color: #fff;
     font-size: 12px;
-    font-family: 'Roboto', 'Helvetica Neue',Helvetica,Arial,sans-serif;
-    .qor-actionbar--container{
+    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    .qor-actionbar--container {
         width: 960px;
-        margin:  0 auto;
+        margin: 0 auto;
     }
-    a{
+    a {
         color: #33c3f0;
         text-decoration: none;
         display: inline-block;
         line-height: 32px;
         height: 32px;
     }
-    @at-root #{&}__right{
+    @at-root #{&}__right {
         float: right;
-        > div{
+        > div {
             float: left;
             margin-left: 16px;
         }
     }
-    @at-root #{&}__left{
+    @at-root #{&}__left {
         float: left;
-        > div{
+        > div {
             float: left;
             margin-right: 24px;
         }
     }
-    @at-root #{&}__info{
-        span{
+    @at-root #{&}__info {
+        span {
             padding-right: 16px;
         }
     }
-    #qor-actionbar__menu-checkbox{
-        &:checked{
-            & + .qor-actionbar__menu{
-                label{
+    #qor-actionbar__menu-checkbox {
+        &:checked {
+            & + .qor-actionbar__menu {
+                label {
                     background-color: rgba(255, 255, 255, .2);
                 }
             }
         }
     }
-    @at-root #{&}__menu{
+    @at-root #{&}__menu {
         position: relative;
-        &:hover{
+        &:hover {
             ul {
                 position: absolute;
                 z-index: 9999;
@@ -56,72 +56,79 @@
                 background-color: #fff;
                 border-radius: 2px;
                 display: block !important;
-                box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+                box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
                 padding: 8px 0;
-                li{
+                li {
                     margin-bottom: 0;
-                    a{
+                    a {
                         display: block;
                         font-size: 14px;
-                        padding: 8px 16px;
+                        padding: 8px 0;
+                        box-sizing: initial;
                         color: #000;
-                        &:hover{
+                        &:hover {
                             background-color: rgba(0, 0, 0, .1);
                         }
                     }
                 }
             }
         }
-        label{
-            display: inline-block;
+        label {
             width: 24px;
-            height: 22px;
+            height: 32px;
             text-align: center;
             line-height: 22px;
-            border-radius: 2em;
-            margin-top: 4px;
+            margin: 0;
+            padding-top: 4px;
             cursor: pointer;
-            img{
+            img {
                 margin-top: 4px;
             }
-            &:hover{
-                background-color: rgba(255, 255, 255, .2);
+            &:hover {
+                i {
+                    background-color: rgba(255, 255, 255, .2);
+                    border-radius: 32px;
+                }
             }
         }
     }
-    @at-root #{&}__logo{
-        img{
+    @at-root #{&}__logo {
+        img {
             margin: 7px 0 0;
         }
     }
 
-    @at-root #{&}__module{
-        > a{
+    @at-root #{&}__module {
+        > a {
             display: inline-block;
             vertical-align: middle;
             cursor: pointer;
 
-            &.qor-actionbar__module-edit{
+            &.qor-actionbar__module-edit {
                 padding-left: 8px;
             }
-            &.qor-actionbar__module-preview{
+            &.qor-actionbar__module-preview {
                 color: #fff;
                 padding-right: 8px;
             }
         }
     }
 
-    @at-root #{&}__module-checkbox{
+    @at-root #{&}__module-checkbox {
         display: none !important;
-        &, &:after, &:before,
-        & *, & *:after, & *:before,
-        & + .qor-actionbar__module-button{
+        &,
+        &:after,
+        &:before,
+        & *,
+        & *:after,
+        & *:before,
+        & + .qor-actionbar__module-button {
             box-sizing: border-box;
-            &::selection{
+            &::selection {
                 background: none;
             }
         }
-        + .qor-actionbar__module-button{
+        + .qor-actionbar__module-button {
             outline: 0;
             display: inline-block;
             vertical-align: middle;
@@ -135,7 +142,8 @@
             padding: 2px;
             transition: all .4s ease;
             user-select: none;
-            &:after, &:before{
+            &:after,
+            &:before {
                 position: relative;
                 display: block;
                 content: "";
@@ -143,38 +151,36 @@
                 height: 20px;
                 top: -5px;
             }
-            &:active{
+            &:active {
                 box-shadow: inset 0 0 0 2em #e8eae9;
-                &::after{
+                &::after {
                     padding-right: .8em;
                 }
             }
             &:hover::after {
-              will-change: padding;
+                will-change: padding;
             }
-            &::after{
+            &::after {
                 left: -5px;
                 border-radius: 2em;
                 background: #fff;
-                transition:
-                left .3s cubic-bezier( 0.175, 0.885, 0.320, 1.275 ),
-                padding .3s ease, margin .3s ease;
-                box-shadow: 0 0 0 1px rgba(0,0,0,.1), 0 4px 0 rgba(0,0,0,.08);
+                transition: left .3s cubic-bezier(0.175, 0.885, 0.320, 1.275), padding .3s ease, margin .3s ease;
+                box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 4px 0 rgba(0, 0, 0, .08);
             }
-            &::before{
+            &::before {
                 display: none;
             }
         }
-        &:checked{
-            + .qor-actionbar__module-button{
+        &:checked {
+            + .qor-actionbar__module-button {
                 background: #b0e3fb;
-                &:active{
+                &:active {
                     box-shadow: none;
-                    &:after{
+                    &:after {
                         margin-left: -.8em;
                     }
                 }
-                &:after{
+                &:after {
                     left: 50%;
                     background-color: #33c3f0;
                 }
@@ -183,12 +189,12 @@
     }
 }
 
-@media only screen and (max-width: 767px){
-    .qor-actionbar .qor-actionbar--container{
+@media only screen and (max-width: 767px) {
+    .qor-actionbar .qor-actionbar--container {
         width: calc(100% - 16px);
         padding: 0 8px;
     }
-    .qor-actionbar__right .qor-actionbar__info span{
+    .qor-actionbar__right .qor-actionbar__info span {
         display: none;
     }
 }
